Dark mode fixes.

--- a/static/styles/menu dark.css
+++ b/static/styles/menu dark.css
@@ -185,6 +185,10 @@ section {
   transition: all 0.5s ease;
 }
 
+.header:hover .darkmode-change {
+  color: black;
+}
+
 
 /* ------------------- Hero ------------------- */
 .hero-section {
